# mobsf-harness

./: .gitignore  README.md  apps.example.yaml  pyproject.toml
deploy/: mobsf-harness.service  mobsf-harness.timer
docs/superpowers/plans/: 2026-04-20-mobsf-agent-harness.md
docs/superpowers/specs/: 2026-04-20-mobsf-agent-harness-design.md
mobsf_harness/: agent.py  cli.py  config.py  mobsf_client.py  notifier.py  pipeline.py  state.py
mobsf_harness/fetchers/: __init__.py  app_store.py  base.py  drop_dir.py  play_store.py
mobsf_harness/llm/: __init__.py  anthropic_client.py  openai_client.py  types.py
mobsf_harness/tools/: __init__.py  emit.py  report.py  types.py
mobsf_harness/tools/search/: __init__.py  brave.py  duckduckgo.py  tavily.py
tests/e2e/: test_smoke.py
tests/fixtures/artifacts/: README.md
tests/fixtures/llm_transcripts/: happy_path.json  missing_summary.json
tests/fixtures/mobsf/: small_report.json
tests/integration/: test_pipeline.py
tests/unit/: test_agent.py  test_cli.py  test_config.py  test_fetchers_app_store.py  test_fetchers_drop_dir.py  test_fetchers_play_store.py  test_llm_anthropic.py  test_llm_openai.py  test_mobsf_client.py  test_notifier.py  test_state.py  test_tools_emit.py  test_tools_report.py  test_tools_search.py
